fix overflow

--- a/public/index.css
+++ b/public/index.css
@@ -40,7 +40,8 @@ body {
     width: 50px;
     text-align: center;
     background-color: #EEEEEE;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
     z-index: 1000;
 }
 
